--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,7 +4,8 @@
     "app.menu.projects": "Projects",
     "app.menu.contact": "Contact",
     "app.about.greeting":"Hi There, I'm",
-    "app.about.title":"Full Stack Developer ",
+    "app.about.welcome":"Welcome to my portfolio",
+    "app.about.title":"I'm a ",
     "app.about.description":"I am a full-stack React, TypeScript and Asp.net developer. I live in Ottawa, Canada. I love everything about the Web and Web Design. My ideal day consists of solving real problems, creating web pages from scratch, testing a new library, adding value, sharing my knowledge and learning something new. Check out my portfolio to see some of my projects.",
     "app.portfolio.title": "Portfolio",
     "app.projects.title": "Projects",
